# ser2tcp

./: Cargo.toml  README.md  serial-simulator.sh
.github/workflows/: cd.yaml
src/: main.rs
