[package]
name = "ser2tcp"
description = "Convert a serial com to tcp"
version = "0.1.0"
authors = ["numaru <kin.numaru@protonmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serialport = "4.2.0"
clap = { version = "4.0.23", features = ["cargo"] }
